    - Note that some scripts might still need minor changes to work
  o It is now possible to write macros that manipulate subtitles directly
  o Scripts have full access to the entire subtitle file, not only the "Events" section
  o Scripts are automatically reloaded when the Export dialog is opened (this can be changed in Options)
- Video mode changes:
  o It has been mostly rewriten and now uses OpenGL instead of software rendering, making it much faster on computers with video cards that don't belong to the stone age. (AMZ)
  o Optionally, it can use a Pixel Shader to convert YV12 to RGB32 in hardware, which is much faster, with a decent video card. (AMZ)
  o Video display fixed on Linux and Mac (Azzy)
  o Made the video display detachable. (AMZ)
  o Fixed Custom Aspect Ratio input. (Dansolo)
  o Added a dummy video provider to create a blank video with customizeable options. (jfs/AMZ)
  o Destination of screenshots can now be set in the options dialog. (AMZ)
  o Added support for using other renderers than VSFilter with Avisynth as video provider. (AMZ)
  o Added support for FFMpegSource in Avisynth provider if FFMpegSource.dll is on Aegisub's folder. (AMZ)
  o Added support for DirectShowSource2 in Avisynth provider if avss.dll is on Aegisub's folder. (AMZ)
  o Added support to save and load keyframe list files. (AMZ)
  o Fixed subtitles positioning removing \p tags from the line. (AMZ)
  o libass support for subtitles on all platforms. (Azzy/AMZ)
  o CSRI support for subtitles on all platforms. (equinox/AMZ)
  o Framegrabs from the video now also includes framenumber in the filename. (jfs)
  o Added a toggleable overscan mask to show which areas might get cropped by televisions. (AMZ)
- Visual Typesetting functionality implemented, which should make typesetting much easier and faster. It supports: (AMZ)
  o Dragging;
  o Rotation on Z axis;
  o Rotation on X/Y axes;
  o Scaling on X/Y axes;
  o Clipping to a rectangle.
- Audio mode changes: