@@ -696,7 +696,7 @@ void FrameMain::OnExportSubtitles(wxCommandEvent & WXUNUSED(event)) {
 			}
 		}
 	}
-	if (autoreload & 1) {
+	if (autoreload & 2) {
 		// Global scripts
 		wxGetApp().global_scripts->Reload();
 	}
@@ -954,9 +954,33 @@ void FrameMain::OnOpenLog (wxCommandEvent &event) {
 ///////////////////
 // Open Automation
 void FrameMain::OnOpenAutomation (wxCommandEvent &event) {
-	VideoContext::Get()->Stop();
-	DialogAutomation dlg(this, local_scripts);
-	dlg.ShowModal();
+	if (wxGetMouseState().ControlDown()) {
+		wxGetApp().global_scripts->Reload();
+		if (wxGetMouseState().ShiftDown()) {
+			const std::vector<Automation4::Script*> scripts = local_scripts->GetScripts();
+			for (size_t i = 0; i < scripts.size(); ++i) {
+				try {
+					scripts[i]->Reload();
+				}
+				catch (const wchar_t *e) {
+					wxLogError(e);
+				}
+				catch (...) {
+					wxLogError(_T("An unknown error occurred reloading Automation script '%s'."), scripts[i]->GetName().c_str());
+				}
+			}
+
+			StatusTimeout(_("Reloaded all Automation scripts"));
+		}
+		else {
+			StatusTimeout(_("Reloaded autoload Automation scripts"));
+		}
+	}
+	else {
+		VideoContext::Get()->Stop();
+		DialogAutomation dlg(this, local_scripts);
+		dlg.ShowModal();
+	}
 }
 
 
