@@ -12,6 +12,7 @@ Please visit http://aegisub.net to download latest version
   o It is now possible to write macros that manipulate subtitles directly
   o Scripts have full access to the entire subtitle file, not only the "Events" section
   o Scripts are automatically reloaded when the Export dialog is opened (this can be changed in Options)
+    - Ctrl or Ctrl+Shift click on the Automation toolbar button to reload autoload/all scripts
 - Video mode changes:
   o It has been mostly rewriten and now uses OpenGL instead of software rendering, making it much faster on computers with video cards that don't belong to the stone age. (AMZ)
   o Optionally, it can use a Pixel Shader to convert YV12 to RGB32 in hardware, which is much faster, with a decent video card. (AMZ)
